# omniworld-builder

./: .gitignore  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml
cli_test_output/unity/Data/: world_data.json
cli_test_output/unity/Scripts/: EntitySpawner.cs  EnvironmentController.cs  WorldLoader.cs
docs/: getting_started.md  multi_agent_architecture.md  wdl_specification.md
src/omniworld_builder/: __init__.py  cli.py
src/omniworld_builder/adapters/: __init__.py  base.py
src/omniworld_builder/adapters/horizon/: __init__.py  generator.py
src/omniworld_builder/adapters/unity/: __init__.py  generator.py
src/omniworld_builder/adapters/unreal/: __init__.py  generator.py
src/omniworld_builder/agents/: __init__.py  base.py  orchestrator.py  qa_agent.py  systems_designer.py  technical_director.py  vision_architect.py  wdl_generator.py
src/omniworld_builder/core/: __init__.py  validators.py  wdl_schema.py
src/omniworld_builder/docs/: __init__.py
src/omniworld_builder/examples/: __init__.py  build_world_from_prompt.py  export_to_engines.py  forest_world.py  sci_fi_station.py
src/omniworld_builder/tools/: __init__.py  asset_registry.py  spatial_reasoning.py
test_cli_output/horizon/data/: worldData.ts  world_data.json
test_cli_output/horizon/scripts/: EntityFactory.ts  EnvironmentController.ts  WorldManager.ts  types.ts
test_cli_output/unity/Scripts/: EntitySpawner.cs  WorldData.cs
test_cli_output/unreal/Scripts/: entity_definitions.py  environment_setup.py  lighting_setup.py  world_builder.py
tests/: __init__.py  test_adapters.py  test_tools.py  test_validators.py  test_wdl_schema.py
