[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omniworld-builder"
version = "0.1.0"
description = "AI-powered universal world builder using multi-agent systems and World Description Language (WDL)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "OmniWorld Team" }
]
keywords = [
    "ai",
    "world-building",
    "game-development",
    "unity",
    "unreal",
    "multi-agent",
    "langchain",
    "langgraph"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.1.0",
    "pydantic>=2.0.0",
    "langchain>=0.2.0",
    "langchain-core>=0.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0"
]

[project.urls]
Homepage = "https://github.com/wildhash/omniworld-builder"
Repository = "https://github.com/wildhash/omniworld-builder"

[tool.hatch.build.targets.wheel]
packages = ["src/omniworld_builder"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
